--- a/vityaz/addition.html
+++ b/vityaz/addition.html
@@ -9,112 +9,113 @@
     <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body class="addition-page">
-
-    <header class="header">
-        <div class="container">
-            <div class="header__box">
-                <a href="#" class="header__logo">
-                    <img src="img/logo.png" alt="#">
-                </a>
-                <nav class="header__menu">
-                    <ul>
-                        <li class="header__menu__drop">
-                            <a href="#" class="header__menu__drop__link">Услуги</a>
-                            <ul class="header__menu__drop__list">
-                                <li><a href="#">Пультовая охрана</a></li>
-                                <li><a href="#">Физическая охрана</a></li>
-                                <li><a href="#">Пожарная сигнализация и противопожарные системы</a></li>
-                                <li><a href="#">Системы контроля и управления доступом</a></li>
-                                <li><a href="#">Технические средства охраны зданий, сооружений и периметров</a></li>
-                                <li><a href="#">Видеонаблюдение</a></li>
-                                <li><a href="#">Дополнитеньные услуги </a></li>
+    <div class="page__bg">
+        <header class="header">
+            <div class="container">
+                <div class="header__box">
+                    <a href="#" class="header__logo">
+                        <img src="img/logo.png" alt="#">
+                    </a>
+                    <nav class="header__menu">
+                        <ul>
+                            <li class="header__menu__drop">
+                                <a href="#" class="header__menu__drop__link">Услуги</a>
+                                <ul class="header__menu__drop__list">
+                                    <li><a href="#">Пультовая охрана</a></li>
+                                    <li><a href="#">Физическая охрана</a></li>
+                                    <li><a href="#">Пожарная сигнализация и противопожарные системы</a></li>
+                                    <li><a href="#">Системы контроля и управления доступом</a></li>
+                                    <li><a href="#">Технические средства охраны зданий, сооружений и периметров</a></li>
+                                    <li><a href="#">Видеонаблюдение</a></li>
+                                    <li><a href="#">Дополнитеньные услуги </a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="#">Оплата услуг</a>
+                            </li>
+                            <li>
+                                <a href="#">Геолокация</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <a href="tel:+77777777777" class="header__phone">+7 777 777 77 77</a>
+                    <div class="header__burger">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <main>
+            <section class="page-head">
+                <div class="container">
+                    <div class="page-head__top">
+                        <div class="section__title page-head__title">Дополнительные услуги</div>
+                    </div>
+                    <div class="page-head__descr">
+                        <p>Мы предлагаем Вам индивидуальное проектирование, монтаж “под ключ” и последующее гарантийное обслуживание:</p>
+                    </div>
+                </div>
+            </section>
+            <section class="addition">
+                <div class="container">
+                    <div class="addition__items">
+                        <div class="addition__item addition__item__first">
+                            <div class="addition__title">Электросети напряжением 0,4 кВ</div>
+                            <ul class="addition__list">
+                                <li>Устройство систем заземления и молниезащиты</li>
+                                <li>Монтаж внутренних электрических сетей</li>
+                                <li>Монтаж технологического оборудования, распределительных  щитов, приборов учета, электрической энергии и автоматики</li>
+                                <li>Монтаж блоков бесперебойного питания и генераторов</li>
+                                <li>Ландшафтное и парковое освещение коттеджных участков</li>
+                                <li>Монтаж освещения</li>
                             </ul>
-                        </li>
-                        <li>
-                            <a href="#">Оплата услуг</a>
-                        </li>
-                        <li>
-                            <a href="#">Геолокация</a>
-                        </li>
-                    </ul>
-                </nav>
-                <a href="tel:+77777777777" class="header__phone">+7 777 777 77 77</a>
-                <div class="header__burger">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
-            </div>
-        </div>
-    </header>
-    <main>
-        <section class="page-head">
-            <div class="container">
-                <div class="page-head__top">
-                    <div class="section__title page-head__title">Дополнительные услуги</div>
-                </div>
-                <div class="page-head__descr">
-                    <p>Мы предлагаем Вам индивидуальное проектирование, монтаж “под ключ” и последующее гарантийное обслуживание:</p>
-                </div>
-            </div>
-        </section>
-        <section class="addition">
-            <div class="container">
-                <div class="addition__items">
-                    <div class="addition__item addition__item__first">
-                        <div class="addition__title">Электросети напряжением 0,4 кВ</div>
-                        <ul class="addition__list">
-                            <li>Устройство систем заземления и молниезащиты</li>
-                            <li>Монтаж внутренних электрических сетей</li>
-                            <li>Монтаж технологического оборудования, распределительных  щитов, приборов учета, электрической энергии и автоматики</li>
-                            <li>Монтаж блоков бесперебойного питания и генераторов</li>
-                            <li>Ландшафтное и парковое освещение коттеджных участков</li>
-                            <li>Монтаж освещения</li>
-                        </ul>
-                        <a href="#" class="btn">Оплатить услуги</a>
-                    </div>
-                    <div class="addition__item addition__item__second">
-                        <div class="addition__title">Электросети напряжением 0,4 кВ</div>
-                        <div class="addition__descr">(пожарная и охранная сигнализации, телефонные сети, компьютерные сети, СКС)</div>
-                        <ul class="addition__list">
-                            <div class="addition__subtitle">Телефония и связь</div>
-                            <li>Разводка телефонных и телевизионных сетей по дому</li>
-                            <li>Установка домофонных систем различной сложности</li>
-                            <li>Монтаж и программирование мини-АТС</li>
-                        </ul>
-                        <ul class="addition__list">
-                            <div class="addition__subtitle">Системы безопасности</div>
-                            <li>Монтаж пожарной сигнализации</li>
-                            <li>Установка систем видеонаблюдения (по участку, скрытую по дому с возможностью записи)</li>
-                            <li>Монтаж охранных систем дома и участка</li>
-                        </ul>
-                        <a href="#" class="btn">Оплатить услуги</a>
+                            <a href="#" class="btn">Оплатить услуги</a>
+                        </div>
+                        <div class="addition__item addition__item__second">
+                            <div class="addition__title">Электросети напряжением 0,4 кВ</div>
+                            <div class="addition__descr">(пожарная и охранная сигнализации, телефонные сети, компьютерные сети, СКС)</div>
+                            <ul class="addition__list">
+                                <div class="addition__subtitle">Телефония и связь</div>
+                                <li>Разводка телефонных и телевизионных сетей по дому</li>
+                                <li>Установка домофонных систем различной сложности</li>
+                                <li>Монтаж и программирование мини-АТС</li>
+                            </ul>
+                            <ul class="addition__list">
+                                <div class="addition__subtitle">Системы безопасности</div>
+                                <li>Монтаж пожарной сигнализации</li>
+                                <li>Установка систем видеонаблюдения (по участку, скрытую по дому с возможностью записи)</li>
+                                <li>Монтаж охранных систем дома и участка</li>
+                            </ul>
+                            <a href="#" class="btn">Оплатить услуги</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </section>
-        <section class="feedback">
-            <div class="feedback__bg__first">
-                <div class="feedback__bg__second">
-                    <div class="container">
-                        <div class="feedback__box">
-                            <div class="feedback__left">
-                                <div class="section__title feedback__title">Заказать обратный звонок</div>
-                                <div class="feedback__descr">Оставьте свой номер телефона и мы свяжемся с вами, чтобы обсудить детали сотрудничества, стоимость работы и ответим на все вопросы</div>
-                            </div>
-                            <div class="feedback__right">
-                                <form action="#" class="feedback-form">
-                                    <input name="name" placeholder="Ваше имя" required>
-                                    <input name="phone" placeholder="Номер телефона" required>
-                                    <button class="btn">Оставить заявку</button>
-                                </form>
+            </section>
+            <section class="feedback">
+                <div class="feedback__bg__first">
+                    <div class="feedback__bg__second">
+                        <div class="container">
+                            <div class="feedback__box">
+                                <div class="feedback__left">
+                                    <div class="section__title feedback__title">Заказать обратный звонок</div>
+                                    <div class="feedback__descr">Оставьте свой номер телефона и мы свяжемся с вами, чтобы обсудить детали сотрудничества, стоимость работы и ответим на все вопросы</div>
+                                </div>
+                                <div class="feedback__right">
+                                    <form action="#" class="feedback-form">
+                                        <input name="name" placeholder="Ваше имя" required>
+                                        <input name="phone" placeholder="Номер телефона" required>
+                                        <button class="btn">Оставить заявку</button>
+                                    </form>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
-    </main>
+            </section>
+        </main>
+    </div>
     <footer class="footer">
         <div class="container">
             <div class="footer__box">
