--- a/vityaz/physical.html
+++ b/vityaz/physical.html
@@ -9,132 +9,134 @@
     <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body class="physical-page">
-
-    <header class="header">
-        <div class="container">
-            <div class="header__box">
-                <a href="#" class="header__logo">
-                    <img src="img/logo.png" alt="#">
-                </a>
-                <nav class="header__menu">
-                    <ul>
-                        <li class="header__menu__drop">
-                            <a href="#" class="header__menu__drop__link">Услуги</a>
-                            <ul class="header__menu__drop__list">
-                                <li><a href="#">Пультовая охрана</a></li>
-                                <li><a href="#">Физическая охрана</a></li>
-                                <li><a href="#">Пожарная сигнализация и противопожарные системы</a></li>
-                                <li><a href="#">Системы контроля и управления доступом</a></li>
-                                <li><a href="#">Технические средства охраны зданий, сооружений и периметров</a></li>
-                                <li><a href="#">Видеонаблюдение</a></li>
-                                <li><a href="#">Дополнитеньные услуги </a></li>
+    
+    <div class="page__bg">
+        <header class="header">
+            <div class="container">
+                <div class="header__box">
+                    <a href="#" class="header__logo">
+                        <img src="img/logo.png" alt="#">
+                    </a>
+                    <nav class="header__menu">
+                        <ul>
+                            <li class="header__menu__drop">
+                                <a href="#" class="header__menu__drop__link">Услуги</a>
+                                <ul class="header__menu__drop__list">
+                                    <li><a href="#">Пультовая охрана</a></li>
+                                    <li><a href="#">Физическая охрана</a></li>
+                                    <li><a href="#">Пожарная сигнализация и противопожарные системы</a></li>
+                                    <li><a href="#">Системы контроля и управления доступом</a></li>
+                                    <li><a href="#">Технические средства охраны зданий, сооружений и периметров</a></li>
+                                    <li><a href="#">Видеонаблюдение</a></li>
+                                    <li><a href="#">Дополнитеньные услуги </a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="#">Оплата услуг</a>
+                            </li>
+                            <li>
+                                <a href="#">Геолокация</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <a href="tel:+77777777777" class="header__phone">+7 777 777 77 77</a>
+                    <div class="header__burger">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <main>
+            <section class="page-head">
+                <div class="container">
+                    <div class="page-head__top">
+                        <div class="section__title page-head__title">Физическая охрана</div>
+                    </div>
+                    <div class="page-head__descr">
+                        <p>Охрана объектов собственности и защита персонала на охраняемых объектах является одним из приоритетных направлений деятельности нашего ЧОО. Наше охранное предприятие имеет большой опыт работы по охране стационарных объектов.</p>
+                    </div>
+                </div>
+            </section>
+            <section class="physical">
+                <div class="container">
+                    <div class="physical__price">
+                        <div class="physical__price__item">
+                            <div class="physical__price__img">
+                                <img src="img/physical_price_1.png" alt="#">
+                            </div>
+                            <div class="physical__subtitle">Один пост охраны круглосуточно</div>
+                            <div class="physical__price__text">
+                                Высококвалифицированный и лицензированный охранник со спецсредствами и средствами защиты.
+                            </div>
+                            <div class="physical__price__value">от 95.000 руб./месяц</div>
+                            <button class="btn">Оставить заявку</button>
+                        </div>
+                        <div class="physical__price__item">
+                            <div class="physical__price__img">
+                                <img src="img/physical_price_2.png" alt="#">
+                            </div>
+                            <div class="physical__subtitle">12-ти часовой пост охраны </div>
+                            <div class="physical__price__text">
+                                Высококвалифицированный и лицензированный охранник со спецсредствами и средствами защиты.
+                            </div>
+                            <div class="physical__price__value">от 150 руб./час (1 охранник)</div>
+                            <button class="btn">Оставить заявку</button>
+                        </div>
+                    </div>
+                    <div class="physical__descr">
+                        <div class="physical__descr__item">
+                            <div class="physical__descr__img">
+                                <img src="img/physical_descr_1.png" alt="#">
+                            </div>
+                            <div class="physical__subtitle">Функции поста охраны:</div>
+                            <ul class="physical__descr__list">
+                                <li> <span>—</span> Контрольно пропускной режим</li>
+                                <li> <span>—</span> Защита объекта от несанкционированного доступа</li>
+                                <li> <span>—</span> Профилактика противоправных действий</li>
+                                <li> <span>—</span> Исполнение других должностных инструкций, согласованных с клиентом</li>
                             </ul>
-                        </li>
-                        <li>
-                            <a href="#">Оплата услуг</a>
-                        </li>
-                        <li>
-                            <a href="#">Геолокация</a>
-                        </li>
-                    </ul>
-                </nav>
-                <a href="tel:+77777777777" class="header__phone">+7 777 777 77 77</a>
-                <div class="header__burger">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
-            </div>
-        </div>
-    </header>
-    <main>
-        <section class="page-head">
-            <div class="container">
-                <div class="page-head__top">
-                    <div class="section__title page-head__title">Физическая охрана</div>
-                </div>
-                <div class="page-head__descr">
-                    <p>Охрана объектов собственности и защита персонала на охраняемых объектах является одним из приоритетных направлений деятельности нашего ЧОО. Наше охранное предприятие имеет большой опыт работы по охране стационарных объектов.</p>
-                </div>
-            </div>
-        </section>
-        <section class="physical">
-            <div class="container">
-                <div class="physical__price">
-                    <div class="physical__price__item">
-                        <div class="physical__price__img">
-                            <img src="img/physical_price_1.png" alt="#">
                         </div>
-                        <div class="physical__subtitle">Один пост охраны круглосуточно</div>
-                        <div class="physical__price__text">
-                            Высококвалифицированный и лицензированный охранник со спецсредствами и средствами защиты.
-                        </div>
-                        <div class="physical__price__value">от 95.000 руб./месяц</div>
-                        <button class="btn">Оставить заявку</button>
-                    </div>
-                    <div class="physical__price__item">
-                        <div class="physical__price__img">
-                            <img src="img/physical_price_2.png" alt="#">
-                        </div>
-                        <div class="physical__subtitle">12-ти часовой пост охраны </div>
-                        <div class="physical__price__text">
-                            Высококвалифицированный и лицензированный охранник со спецсредствами и средствами защиты.
-                        </div>
-                        <div class="physical__price__value">от 150 руб./час (1 охранник)</div>
-                        <button class="btn">Оставить заявку</button>
-                    </div>
-                </div>
-                <div class="physical__descr">
-                    <div class="physical__descr__item">
-                        <div class="physical__descr__img">
-                            <img src="img/physical_descr_1.png" alt="#">
-                        </div>
-                        <div class="physical__subtitle">Функции поста охраны:</div>
-                        <ul class="physical__descr__list">
-                            <li> <span>—</span> Контрольно пропускной режим</li>
-                            <li> <span>—</span> Защита объекта от несанкционированного доступа</li>
-                            <li> <span>—</span> Профилактика противоправных действий</li>
-                            <li> <span>—</span> Исполнение других должностных инструкций, согласованных с клиентом</li>
-                        </ul>
-                    </div>
-                    <div class="physical__descr__item">
-                        <div class="physical__descr__img">
-                            <img src="img/physical_descr_2.png" alt="#">
-                        </div>
-                        <div class="physical__subtitle">Объектом охраны может быть:</div>
-                        <ul class="physical__descr__list">
-                            <li> <span>—</span> Офисы и магазины</li>
-                            <li> <span>—</span> Объекты социального назначения</li>
-                            <li> <span>—</span> Прилегающая территория</li>
-                            <li> <span>—</span> Автостоянки и паркинги</li>
-                            <li> <span>—</span> Производственные и складские помещения</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="feedback">
-            <div class="feedback__bg__first">
-                <div class="feedback__bg__second">
-                    <div class="container">
-                        <div class="feedback__box">
-                            <div class="feedback__left">
-                                <div class="section__title feedback__title">Заказать обратный звонок</div>
-                                <div class="feedback__descr">Оставьте свой номер телефона и мы свяжемся с вами, чтобы обсудить детали сотрудничества, стоимость работы и ответим на все вопросы</div>
+                        <div class="physical__descr__item">
+                            <div class="physical__descr__img">
+                                <img src="img/physical_descr_2.png" alt="#">
                             </div>
-                            <div class="feedback__right">
-                                <form action="#" class="feedback-form">
-                                    <input name="name" placeholder="Ваше имя" required>
-                                    <input name="phone" placeholder="Номер телефона" required>
-                                    <button class="btn">Оставить заявку</button>
-                                </form>
+                            <div class="physical__subtitle">Объектом охраны может быть:</div>
+                            <ul class="physical__descr__list">
+                                <li> <span>—</span> Офисы и магазины</li>
+                                <li> <span>—</span> Объекты социального назначения</li>
+                                <li> <span>—</span> Прилегающая территория</li>
+                                <li> <span>—</span> Автостоянки и паркинги</li>
+                                <li> <span>—</span> Производственные и складские помещения</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="feedback">
+                <div class="feedback__bg__first">
+                    <div class="feedback__bg__second">
+                        <div class="container">
+                            <div class="feedback__box">
+                                <div class="feedback__left">
+                                    <div class="section__title feedback__title">Заказать обратный звонок</div>
+                                    <div class="feedback__descr">Оставьте свой номер телефона и мы свяжемся с вами, чтобы обсудить детали сотрудничества, стоимость работы и ответим на все вопросы</div>
+                                </div>
+                                <div class="feedback__right">
+                                    <form action="#" class="feedback-form">
+                                        <input name="name" placeholder="Ваше имя" required>
+                                        <input name="phone" placeholder="Номер телефона" required>
+                                        <button class="btn">Оставить заявку</button>
+                                    </form>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
-    </main>
+            </section>
+        </main>
+    </div>
     <footer class="footer">
         <div class="container">
             <div class="footer__box">
