--- a/vityaz/pult.html
+++ b/vityaz/pult.html
@@ -9,157 +9,158 @@
     <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body class="pult-page">
-
-    <header class="header">
-        <div class="container">
-            <div class="header__box">
-                <a href="#" class="header__logo">
-                    <img src="img/logo.png" alt="#">
-                </a>
-                <nav class="header__menu">
-                    <ul>
-                        <li class="header__menu__drop">
-                            <a href="#" class="header__menu__drop__link">Услуги</a>
-                            <ul class="header__menu__drop__list">
-                                <li><a href="#">Пультовая охрана</a></li>
-                                <li><a href="#">Физическая охрана</a></li>
-                                <li><a href="#">Пожарная сигнализация и противопожарные системы</a></li>
-                                <li><a href="#">Системы контроля и управления доступом</a></li>
-                                <li><a href="#">Технические средства охраны зданий, сооружений и периметров</a></li>
-                                <li><a href="#">Видеонаблюдение</a></li>
-                                <li><a href="#">Дополнитеньные услуги </a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#">Оплата услуг</a>
-                        </li>
-                        <li>
-                            <a href="#">Геолокация</a>
-                        </li>
+    <div class="page__bg">
+        <header class="header">
+            <div class="container">
+                <div class="header__box">
+                    <a href="#" class="header__logo">
+                        <img src="img/logo.png" alt="#">
+                    </a>
+                    <nav class="header__menu">
+                        <ul>
+                            <li class="header__menu__drop">
+                                <a href="#" class="header__menu__drop__link">Услуги</a>
+                                <ul class="header__menu__drop__list">
+                                    <li><a href="#">Пультовая охрана</a></li>
+                                    <li><a href="#">Физическая охрана</a></li>
+                                    <li><a href="#">Пожарная сигнализация и противопожарные системы</a></li>
+                                    <li><a href="#">Системы контроля и управления доступом</a></li>
+                                    <li><a href="#">Технические средства охраны зданий, сооружений и периметров</a></li>
+                                    <li><a href="#">Видеонаблюдение</a></li>
+                                    <li><a href="#">Дополнитеньные услуги </a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="#">Оплата услуг</a>
+                            </li>
+                            <li>
+                                <a href="#">Геолокация</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <a href="tel:+77777777777" class="header__phone">+7 777 777 77 77</a>
+                    <div class="header__burger">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <main>
+            <section class="page-head">
+                <div class="container">
+                    <div class="page-head__top">
+                        <div class="section__title page-head__title">Пультовая охрана</div>
+                    </div>
+                    <ul class="page-head__list">
+                        <li>Централизованное наблюдение диспетчером за объектом при помощи радиоканальной охранной системы</li>
+                        <li>Выезд группы быстрого реагирования (ГБР)</li>
+                        <li>Тех. контроль и обслуживание охранной системы высоко квалифицированным инжинером</li>
+                        <li>Консультации и подготовка рекомендаций клиентам по вопросам правомерной защиты от противоправных посягательств</li>
                     </ul>
-                </nav>
-                <a href="tel:+77777777777" class="header__phone">+7 777 777 77 77</a>
-                <div class="header__burger">
-                    <span></span>
-                    <span></span>
-                    <span></span>
                 </div>
-            </div>
-        </div>
-    </header>
-    <main>
-        <section class="page-head">
-            <div class="container">
-                <div class="page-head__top">
-                    <div class="section__title page-head__title">Пультовая охрана</div>
-                </div>
-                <ul class="page-head__list">
-                    <li>Централизованное наблюдение диспетчером за объектом при помощи радиоканальной охранной системы</li>
-                    <li>Выезд группы быстрого реагирования (ГБР)</li>
-                    <li>Тех. контроль и обслуживание охранной системы высоко квалифицированным инжинером</li>
-                    <li>Консультации и подготовка рекомендаций клиентам по вопросам правомерной защиты от противоправных посягательств</li>
-                </ul>
-            </div>
-        </section>
-        <section class="variants">
-            <div class="container">
-                <div class="section__title">Стоимость минимального комплекта системы (с установкой)</div>
-                <div class="variants__items">
-                    <div class="variants__item">
-                        <div class="variants__item__box">
-                            <ul class="variants__list">
-                                <li>Объект площадью до 100 м2</li>
-                            </ul>
-                            <div class="variants__price">от 25.000 руб.</div>
-                            <button class="btn">Оставить заявку</button>
-                        </div>
-                    </div>
-                    <div class="variants__item">
-                        <div class="variants__item__box">
-                            <ul class="variants__list">
-                                <li>Объект площадью до 100 м2</li>
-                            </ul>
-                            <div class="variants__price">от 30.000 руб.</div>
-                            <button class="btn">Оставить заявку</button>
-                        </div>
-                    </div>
-                    <div class="variants__item">
-                        <div class="variants__item__box">
-                            <ul class="variants__list">
-                                <li>Объект площадью до 100 м2</li>
-                            </ul>
-                            <div class="variants__price">от 35.000 руб.</div>
-                            <button class="btn">Оставить заявку</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="device">
-            <div class="container">
-                <div class="section__title">Оборудование для наблюдения</div>
-                <div class="device__items">
-                    <div class="device__item">
-                        <div class="device__img">
-                            <img src="img/device_5.png" alt="#">
-                        </div>
-                        <div class="device__subtitle">Передатчик</div>
-                    </div>
-                    <div class="device__item">
-                        <div class="device__img">
-                            <img src="img/device_3.png" alt="#">
-                        </div>
-                        <div class="device__subtitle">Источник бесперебойного <br> питания регистратора</div>
-                    </div>
-                    <div class="device__item">
-                        <div class="device__img">
-                            <img src="img/device_6.png" alt="#">
-                        </div>
-                        <div class="device__subtitle">Датчики слежения</div>
-                    </div>
-                    <div class="device__item">
-                        <div class="device__img">
-                            <img src="img/device_7.png" alt="#">
-                        </div>
-                        <div class="device__subtitle">Тревожная кнопка</div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="note">
-            <div class="container">
-                <div class="note__box">
-                    <div class="note__icon">
-                        <img src="img/note.png" alt="#">
-                    </div>
-                    <div class="note__text">
-                        Количество датчиков слежения и кофигурация всей системы расчитывается инженером исходя из потребностей клиента, тех. особенностей объекта и требований регламентной документации
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="feedback">
-            <div class="feedback__bg__first">
-                <div class="feedback__bg__second">
-                    <div class="container">
-                        <div class="feedback__box">
-                            <div class="feedback__left">
-                                <div class="section__title feedback__title">Заказать обратный звонок</div>
-                                <div class="feedback__descr">Оставьте свой номер телефона и мы свяжемся с вами, чтобы обсудить детали сотрудничества, стоимость работы и ответим на все вопросы</div>
+            </section>
+            <section class="variants">
+                <div class="container">
+                    <div class="section__title">Стоимость минимального комплекта системы (с установкой)</div>
+                    <div class="variants__items">
+                        <div class="variants__item">
+                            <div class="variants__item__box">
+                                <ul class="variants__list">
+                                    <li>Объект площадью до 100 м2</li>
+                                </ul>
+                                <div class="variants__price">от 25.000 руб.</div>
+                                <button class="btn">Оставить заявку</button>
                             </div>
-                            <div class="feedback__right">
-                                <form action="#" class="feedback-form">
-                                    <input name="name" placeholder="Ваше имя" required>
-                                    <input name="phone" placeholder="Номер телефона" required>
-                                    <button class="btn">Оставить заявку</button>
-                                </form>
+                        </div>
+                        <div class="variants__item">
+                            <div class="variants__item__box">
+                                <ul class="variants__list">
+                                    <li>Объект площадью до 100 м2</li>
+                                </ul>
+                                <div class="variants__price">от 30.000 руб.</div>
+                                <button class="btn">Оставить заявку</button>
+                            </div>
+                        </div>
+                        <div class="variants__item">
+                            <div class="variants__item__box">
+                                <ul class="variants__list">
+                                    <li>Объект площадью до 100 м2</li>
+                                </ul>
+                                <div class="variants__price">от 35.000 руб.</div>
+                                <button class="btn">Оставить заявку</button>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
-    </main>
+            </section>
+            <section class="device">
+                <div class="container">
+                    <div class="section__title">Оборудование для наблюдения</div>
+                    <div class="device__items">
+                        <div class="device__item">
+                            <div class="device__img">
+                                <img src="img/device_5.png" alt="#">
+                            </div>
+                            <div class="device__subtitle">Передатчик</div>
+                        </div>
+                        <div class="device__item">
+                            <div class="device__img">
+                                <img src="img/device_3.png" alt="#">
+                            </div>
+                            <div class="device__subtitle">Источник бесперебойного <br> питания регистратора</div>
+                        </div>
+                        <div class="device__item">
+                            <div class="device__img">
+                                <img src="img/device_6.png" alt="#">
+                            </div>
+                            <div class="device__subtitle">Датчики слежения</div>
+                        </div>
+                        <div class="device__item">
+                            <div class="device__img">
+                                <img src="img/device_7.png" alt="#">
+                            </div>
+                            <div class="device__subtitle">Тревожная кнопка</div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="note">
+                <div class="container">
+                    <div class="note__box">
+                        <div class="note__icon">
+                            <img src="img/note.png" alt="#">
+                        </div>
+                        <div class="note__text">
+                            Количество датчиков слежения и кофигурация всей системы расчитывается инженером исходя из потребностей клиента, тех. особенностей объекта и требований регламентной документации
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="feedback">
+                <div class="feedback__bg__first">
+                    <div class="feedback__bg__second">
+                        <div class="container">
+                            <div class="feedback__box">
+                                <div class="feedback__left">
+                                    <div class="section__title feedback__title">Заказать обратный звонок</div>
+                                    <div class="feedback__descr">Оставьте свой номер телефона и мы свяжемся с вами, чтобы обсудить детали сотрудничества, стоимость работы и ответим на все вопросы</div>
+                                </div>
+                                <div class="feedback__right">
+                                    <form action="#" class="feedback-form">
+                                        <input name="name" placeholder="Ваше имя" required>
+                                        <input name="phone" placeholder="Номер телефона" required>
+                                        <button class="btn">Оставить заявку</button>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
+    </div>
     <footer class="footer">
         <div class="container">
             <div class="footer__box">
