--- a/vityaz/tech.html
+++ b/vityaz/tech.html
@@ -9,107 +9,108 @@
     <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body class="tech-page">
-
-    <header class="header">
-        <div class="container">
-            <div class="header__box">
-                <a href="#" class="header__logo">
-                    <img src="img/logo.png" alt="#">
-                </a>
-                <nav class="header__menu">
-                    <ul>
-                        <li class="header__menu__drop">
-                            <a href="#" class="header__menu__drop__link">Услуги</a>
-                            <ul class="header__menu__drop__list">
-                                <li><a href="#">Пультовая охрана</a></li>
-                                <li><a href="#">Физическая охрана</a></li>
-                                <li><a href="#">Пожарная сигнализация и противопожарные системы</a></li>
-                                <li><a href="#">Системы контроля и управления доступом</a></li>
-                                <li><a href="#">Технические средства охраны зданий, сооружений и периметров</a></li>
-                                <li><a href="#">Видеонаблюдение</a></li>
-                                <li><a href="#">Дополнитеньные услуги </a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#">Оплата услуг</a>
-                        </li>
-                        <li>
-                            <a href="#">Геолокация</a>
-                        </li>
-                    </ul>
-                </nav>
-                <a href="tel:+77777777777" class="header__phone">+7 777 777 77 77</a>
-                <div class="header__burger">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
-            </div>
-        </div>
-    </header>
-    <main>
-        <section class="page-head">
+    <div class="page__bg">
+        <header class="header">
             <div class="container">
-                <div class="page-head__top">
-                    <div class="section__title page-head__title">Технические средства охраны зданий, сооружений и периметров</div>
-                </div>
-                <div class="page-head__descr">
-                    <p>Самостоятельное техническое решение, предназначенное для охраны объекта и его перимет-ра, или входящее в состав систем охранной и тревожной сигнализации, контроля и управления доступом, видеонаблюдения, охранного освещения.</p>
-                </div>
-            </div>
-        </section>
-        <section class="tools">
-            <div class="container">
-                <div class="tools__items">
-                    <div class="tools__item">
-                        <div class="tools__img">
-                            <img src="img/tools_1.svg" alt="#">
-                        </div>
-                        <div class="tools__subtitle">Охранное освещение</div>
-                    </div>
-                    <div class="tools__item">
-                        <div class="tools__img">
-                            <img src="img/tools_2.svg" alt="#">
-                        </div>
-                        <div class="tools__subtitle">Контроль и управление доступом</div>
-                    </div>
-                    <div class="tools__item">
-                        <div class="tools__img">
-                            <img src="img/tools_3.svg" alt="#">
-                        </div>
-                        <div class="tools__subtitle">Видеонаблюдение</div>
-                    </div>
-                    <div class="tools__item">
-                        <div class="tools__img">
-                            <img src="img/tools_4.svg" alt="#">
-                        </div>
-                        <div class="tools__subtitle">Охранная и тревожная сигнализация</div>
+                <div class="header__box">
+                    <a href="#" class="header__logo">
+                        <img src="img/logo.png" alt="#">
+                    </a>
+                    <nav class="header__menu">
+                        <ul>
+                            <li class="header__menu__drop">
+                                <a href="#" class="header__menu__drop__link">Услуги</a>
+                                <ul class="header__menu__drop__list">
+                                    <li><a href="#">Пультовая охрана</a></li>
+                                    <li><a href="#">Физическая охрана</a></li>
+                                    <li><a href="#">Пожарная сигнализация и противопожарные системы</a></li>
+                                    <li><a href="#">Системы контроля и управления доступом</a></li>
+                                    <li><a href="#">Технические средства охраны зданий, сооружений и периметров</a></li>
+                                    <li><a href="#">Видеонаблюдение</a></li>
+                                    <li><a href="#">Дополнитеньные услуги </a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="#">Оплата услуг</a>
+                            </li>
+                            <li>
+                                <a href="#">Геолокация</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <a href="tel:+77777777777" class="header__phone">+7 777 777 77 77</a>
+                    <div class="header__burger">
+                        <span></span>
+                        <span></span>
+                        <span></span>
                     </div>
                 </div>
             </div>
-        </section>
-        <section class="feedback">
-            <div class="feedback__bg__first">
-                <div class="feedback__bg__second">
-                    <div class="container">
-                        <div class="feedback__box">
-                            <div class="feedback__left">
-                                <div class="section__title feedback__title">Заказать обратный звонок</div>
-                                <div class="feedback__descr">Оставьте свой номер телефона и мы свяжемся с вами, чтобы обсудить детали сотрудничества, стоимость работы и ответим на все вопросы</div>
+        </header>
+        <main>
+            <section class="page-head">
+                <div class="container">
+                    <div class="page-head__top">
+                        <div class="section__title page-head__title">Технические средства охраны зданий, сооружений и периметров</div>
+                    </div>
+                    <div class="page-head__descr">
+                        <p>Самостоятельное техническое решение, предназначенное для охраны объекта и его перимет-ра, или входящее в состав систем охранной и тревожной сигнализации, контроля и управления доступом, видеонаблюдения, охранного освещения.</p>
+                    </div>
+                </div>
+            </section>
+            <section class="tools">
+                <div class="container">
+                    <div class="tools__items">
+                        <div class="tools__item">
+                            <div class="tools__img">
+                                <img src="img/tools_1.svg" alt="#">
                             </div>
-                            <div class="feedback__right">
-                                <form action="#" class="feedback-form">
-                                    <input name="name" placeholder="Ваше имя" required>
-                                    <input name="phone" placeholder="Номер телефона" required>
-                                    <button class="btn">Оставить заявку</button>
-                                </form>
+                            <div class="tools__subtitle">Охранное освещение</div>
+                        </div>
+                        <div class="tools__item">
+                            <div class="tools__img">
+                                <img src="img/tools_2.svg" alt="#">
+                            </div>
+                            <div class="tools__subtitle">Контроль и управление доступом</div>
+                        </div>
+                        <div class="tools__item">
+                            <div class="tools__img">
+                                <img src="img/tools_3.svg" alt="#">
+                            </div>
+                            <div class="tools__subtitle">Видеонаблюдение</div>
+                        </div>
+                        <div class="tools__item">
+                            <div class="tools__img">
+                                <img src="img/tools_4.svg" alt="#">
+                            </div>
+                            <div class="tools__subtitle">Охранная и тревожная сигнализация</div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="feedback">
+                <div class="feedback__bg__first">
+                    <div class="feedback__bg__second">
+                        <div class="container">
+                            <div class="feedback__box">
+                                <div class="feedback__left">
+                                    <div class="section__title feedback__title">Заказать обратный звонок</div>
+                                    <div class="feedback__descr">Оставьте свой номер телефона и мы свяжемся с вами, чтобы обсудить детали сотрудничества, стоимость работы и ответим на все вопросы</div>
+                                </div>
+                                <div class="feedback__right">
+                                    <form action="#" class="feedback-form">
+                                        <input name="name" placeholder="Ваше имя" required>
+                                        <input name="phone" placeholder="Номер телефона" required>
+                                        <button class="btn">Оставить заявку</button>
+                                    </form>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
-    </main>
+            </section>
+        </main>
+    </div>
     <footer class="footer">
         <div class="container">
             <div class="footer__box">
