--- a/vityaz/index.html
+++ b/vityaz/index.html
@@ -39,7 +39,7 @@
                             </li>
                         </ul>
                     </nav>
-                    <a href="tel:+77777777777" class="header__phone" data-modal="action">+7 777 777 77 77</a>
+                    <a href="tel:+77777777777" class="header__phone">+7 777 777 77 77</a>
                     <div class="header__burger">
                         <span></span>
                         <span></span>
@@ -55,7 +55,7 @@
                     <form action="#" class="promo__form">
                         <div class="promo__form__box">
                             <input name="phone" placeholder="+7 (___)-___-__-__" required>
-                            <button class="promo__form__btn">Жду звонка</button>
+                            <button class="promo__form__btn" data-modal="action">Жду звонка</button>
                         </div>
                         <div class="promo__form__text">Получите бесплатную консультацию по вашему вопросу</div>
                     </form>
