--- a/zaliv/index.html
+++ b/zaliv/index.html
@@ -54,17 +54,17 @@
             <div class="container">
                 <div class="adsense-slider__box">
                     <div>
-                        <a href="#" class="adsense__slide">
+                        <a href="#" class="adsense-slider__slide">
                             <img src="img/adsense_2.png" alt="#">
                         </a>
                     </div>
                     <div>
-                        <a href="#" class="adsense__slide">
+                        <a href="#" class="adsense-slider__slide">
                             <img src="img/adsense_2.png" alt="#">
                         </a>
                     </div>
                     <div>
-                        <a href="#" class="adsense__slide">
+                        <a href="#" class="adsense-slider__slide">
                             <img src="img/adsense_2.png" alt="#">
                         </a>
                     </div>
@@ -133,62 +133,60 @@
             <div class="container">
                 <div class="page-box__inner">
                     <section class="news">
-                        <div class="container">
-                            <div class="section__title news__title">Новости</div>
-                            <div class="news__box">
-                                <div class="lc">
-                                    <div class="lc__title">Личный кабинет</div>
-                                    <form action="#" class="lc__form">
-                                        <input type="text" placeholder="Логин">
-                                        <input type="password" placeholder="Пароль">
-                                        <button>Вход</button>
-                                    </form>
-                                    <a href="#" class="lc__link">Вход по номеру телефона</a>
+                        <div class="section__title news__title">Новости</div>
+                        <div class="news__box">
+                            <div class="lc">
+                                <div class="lc__title">Личный кабинет</div>
+                                <form action="#" class="lc__form">
+                                    <input type="text" placeholder="Логин">
+                                    <input type="password" placeholder="Пароль">
+                                    <button>Вход</button>
+                                </form>
+                                <a href="#" class="lc__link">Вход по номеру телефона</a>
+                            </div>
+                            <div class="news__mini">
+                                <a href="#" class="news__mini__item">
+                                    <div class="news__mini__img">
+                                        <img src="img/news_mini_1.png" alt="#">
+                                    </div>
+                                    <div class="news__mini__title">Водитель автобуса, устроивший смертельное ДТП.</div>
+                                </a>
+                                <a href="#" class="news__mini__item">
+                                    <div class="news__mini__img">
+                                        <img src="img/news_mini_2.png" alt="#">
+                                    </div>
+                                    <div class="news__mini__title">У канала 2х2 изменился логотип и фирменный стиль!</div>
+                                </a>
+                                <a href="#" class="news__mini__item">
+                                    <div class="news__mini__img">
+                                        <img src="img/news_mini_3.png" alt="#">
+                                    </div>
+                                    <div class="news__mini__title">Турнир по волейболу среди команд "Залив ТВ"</div>
+                                </a>
+                                <a href="#" class="news__mini__item">
+                                    <div class="news__mini__img">
+                                        <img src="img/news_mini_4.png" alt="#">
+                                    </div>
+                                    <div class="news__mini__title">Уважаемые <br> абоненты!</div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="news__main">
+                            <div class="news__main__item">
+                                <div class="news__main__title">Турнир по волейболу среди команд “Залив ТВ”</div>
+                                <div class="news__main__text">На пляже "Северный" состоялся корпоративный турнир по волейболу среди команд "Залив ТВ". Это спортивное мероприятие посвятили Дню рождения любимого города Сестрорецка. Всё лето сотрудники нашего телеканала тренировались на пляже парка "Дубки", а также на резиновой площадке на "Северном". Соревнования по волейболу стали подведением итогов спортивного летнего сезона. В отличном настроении и хорошей форме встречаем новый телевизионный сезон!</div>
+                                <div class="news__main__img">
+                                    <img src="img/news_main_1.jpg" alt="#">
                                 </div>
-                                <div class="news__mini">
-                                    <a href="#" class="news__mini__item">
-                                        <div class="news__mini__img">
-                                            <img src="img/news_mini_1.png" alt="#">
-                                        </div>
-                                        <div class="news__mini__title">Водитель автобуса, устроивший смертельное ДТП.</div>
-                                    </a>
-                                    <a href="#" class="news__mini__item">
-                                        <div class="news__mini__img">
-                                            <img src="img/news_mini_2.png" alt="#">
-                                        </div>
-                                        <div class="news__mini__title">У канала 2х2 изменился логотип и фирменный стиль!</div>
-                                    </a>
-                                    <a href="#" class="news__mini__item">
-                                        <div class="news__mini__img">
-                                            <img src="img/news_mini_3.png" alt="#">
-                                        </div>
-                                        <div class="news__mini__title">Турнир по волейболу среди команд "Залив ТВ"</div>
-                                    </a>
-                                    <a href="#" class="news__mini__item">
-                                        <div class="news__mini__img">
-                                            <img src="img/news_mini_4.png" alt="#">
-                                        </div>
-                                        <div class="news__mini__title">Уважаемые абоненты!</div>
-                                    </a>
+                                <div class="news__main__img">
+                                    <img src="img/news_main_2.jpg" alt="#">
                                 </div>
                             </div>
-                            <div class="news__main">
-                                <div class="news__main__item">
-                                    <div class="news__main__title">Турнир по волейболу среди команд “Залив ТВ”</div>
-                                    <div class="news__main__text">На пляже "Северный" состоялся корпоративный турнир по волейболу среди команд "Залив ТВ". Это спортивное мероприятие посвятили Дню рождения любимого города Сестрорецка. Всё лето сотрудники нашего телеканала тренировались на пляже парка "Дубки", а также на резиновой площадке на "Северном". Соревнования по волейболу стали подведением итогов спортивного летнего сезона. В отличном настроении и хорошей форме встречаем новый телевизионный сезон!</div>
-                                    <div class="news__main__img">
-                                        <img src="img/news_main_1.jpg" alt="#">
-                                    </div>
-                                    <div class="news__main__img">
-                                        <img src="img/news_main_2.jpg" alt="#">
-                                    </div>
-                                </div>
-                                <div class="news__main__item">
-                                    <div class="news__main__title">Уважаемые абоненты!</div>
-                                    <div class="news__main__text">Аналоговый канал "Охота и рыбалка" переместился на частоту 434,25 МГц.</div>
-                                    <div class="news__main__img">
-                                        <img src="img/news_main_3.png" alt="#">
-                                    </div>
+                            <div class="news__main__item">
+                                <div class="news__main__title">Уважаемые абоненты!</div>
+                                <div class="news__main__text">Аналоговый канал "Охота и рыбалка" переместился на частоту 434,25 МГц.</div>
+                                <div class="news__main__img">
+                                    <img src="img/news_main_3.png" alt="#">
                                 </div>
                             </div>
                         </div>
