--- a/zaliv/program.html
+++ b/zaliv/program.html
@@ -155,7 +155,7 @@
                     </div>
                     <section class="program">
                         <div class="section__title program__title">“ДОРОГА К ХРАМУ”</div>
-                        <div class="program__descr">
+                        <div class="section__descr program__descr">
                             <p>Программа посвящена вопросам религии, веры и духовной составляющей жизни.</p>
                             <div class="program__presenter">Ведущий: Протоиерей Михаил Петропавловский</div>
                             <p>Настоятель храма Петра и Павла в Сестрорецке</p>
