--- a/zaliv/channels.html
+++ b/zaliv/channels.html
@@ -8,7 +8,7 @@
     <title>Список телеканалов</title>
     <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
-<body>
+<body class="channels-page">
     <header class="header">
         <div class="header__top">
             <div class="container">
@@ -54,17 +54,17 @@
             <div class="container">
                 <div class="adsense-slider__box">
                     <div>
-                        <a href="#" class="adsense__slide">
+                        <a href="#" class="adsense-slider__slide">
                             <img src="img/adsense_2.png" alt="#">
                         </a>
                     </div>
                     <div>
-                        <a href="#" class="adsense__slide">
+                        <a href="#" class="adsense-slider__slide">
                             <img src="img/adsense_2.png" alt="#">
                         </a>
                     </div>
                     <div>
-                        <a href="#" class="adsense__slide">
+                        <a href="#" class="adsense-slider__slide">
                             <img src="img/adsense_2.png" alt="#">
                         </a>
                     </div>
@@ -171,19 +171,19 @@
                             <div class="channels__item">
                                 <div class="channels__subtitle">Телепрограмма от наших партнеров:</div>
                                 <ul class="channels__list">
-                                    <li>10 ИЮНЯ В 16:00 - ПСИХОЛОГИЯ LIVE С АМИНОЙ НАЗАРАЛИЕВОЙ. ТЕМА: БЫТЬ ЖЕНЩИНОЙ</li>
-                                    <li>10 ИЮНЯ В 22:00 - «БИКОЗ LIVE» С МИХАИЛОМ КОЗЫРЕВЫМ</li>
-                                    <li>11 ИЮНЯ В 18:00 - ПРОГРАММА «НЮАНСЫ» С ЮЛИЕЙ ТАРАТУТОЙ</li>
-                                    <li>11 ИЮНЯ В 19:00 - «СИ(н)ДИ ДОМА» С НАТАЛЬЕЙ СИНДЕЕВОЙ. ГОСТЬ – МАКСИМ ВИТОРГАН.</li>
-                                    <li>12 ИЮНЯ В 19:00 - ПРОГРАММА «FAKE NEWS»</li>
+                                    <li><span>10 ИЮНЯ В 16:00</span> - ПСИХОЛОГИЯ LIVE С АМИНОЙ НАЗАРАЛИЕВОЙ. ТЕМА: БЫТЬ ЖЕНЩИНОЙ</li>
+                                    <li><span>10 ИЮНЯ В 22:00</span> - «БИКОЗ LIVE» С МИХАИЛОМ КОЗЫРЕВЫМ</li>
+                                    <li><span>11 ИЮНЯ В 18:00</span> - ПРОГРАММА «НЮАНСЫ» С ЮЛИЕЙ ТАРАТУТОЙ</li>
+                                    <li><span>11 ИЮНЯ В 19:00</span> - «СИ(н)ДИ ДОМА» С НАТАЛЬЕЙ СИНДЕЕВОЙ. ГОСТЬ – МАКСИМ ВИТОРГАН.</li>
+                                    <li><span>12 ИЮНЯ В 19:00</span> - ПРОГРАММА «FAKE NEWS»</li>
                                 </ul>
                             </div>
                             <div class="channels__item">
                                 <div class="channels__subtitle">КИНО НЕ ДЛЯ ВСЕХ:</div>
                                 <ul class="channels__list">
-                                    <li>9-12 ИЮНЯ В 8:00 – BBC НА ДОЖДЕ 1-4 СЕРИЯ «СРЕДИЗЕМНОМОРЬЕ С САЙМОНОМ РИВОМ» (16+)</li>
-                                    <li>9-11 ИЮНЯ В 13:00 – ДОКУМЕНТАЛЬНЫЙ СЕРИАЛ «СЕКРЕТЫ АМОНАШВИЛИ» - 5-14 СЕРИЯ (12+)</li>
-                                    <li>13-14 ИЮНЯ В 22:00 – ДОКУМЕНТАЛЬНОЕ КИНО «РОМАН КОФМАН. ПОСВЯЩЕНИЕ» - 1-2 СЕРИЯ (18+)</li>
+                                    <li> <span>9-12 ИЮНЯ В 8:00</span> – BBC НА ДОЖДЕ 1-4 СЕРИЯ «СРЕДИЗЕМНОМОРЬЕ С САЙМОНОМ РИВОМ» (16+)</li>
+                                    <li> <span>9-11 ИЮНЯ В 13:00</span> – ДОКУМЕНТАЛЬНЫЙ СЕРИАЛ «СЕКРЕТЫ АМОНАШВИЛИ» - 5-14 СЕРИЯ (12+)</li>
+                                    <li> <span>13-14 ИЮНЯ В 22:00</span> – ДОКУМЕНТАЛЬНОЕ КИНО «РОМАН КОФМАН. ПОСВЯЩЕНИЕ» - 1-2 СЕРИЯ (18+)</li>
                                 </ul>
                                 <div class="channels__img">
                                     <img src="img/channels_1.jpg" alt="#">
