--- a/zaliv/contacts.html
+++ b/zaliv/contacts.html
@@ -8,7 +8,7 @@
     <title>Контакты</title>
     <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
-<body>
+<body class="contacts-page">
     <header class="header">
         <div class="header__top">
             <div class="container">
@@ -54,17 +54,17 @@
             <div class="container">
                 <div class="adsense-slider__box">
                     <div>
-                        <a href="#" class="adsense__slide">
+                        <a href="#" class="adsense-slider__slide">
                             <img src="img/adsense_2.png" alt="#">
                         </a>
                     </div>
                     <div>
-                        <a href="#" class="adsense__slide">
+                        <a href="#" class="adsense-slider__slide">
                             <img src="img/adsense_2.png" alt="#">
                         </a>
                     </div>
                     <div>
-                        <a href="#" class="adsense__slide">
+                        <a href="#" class="adsense-slider__slide">
                             <img src="img/adsense_2.png" alt="#">
                         </a>
                     </div>
@@ -220,14 +220,14 @@
                                     <div class="contacts__subtitle">Адрес,  г.Сестрорецк:</div>
                                     <div class="contacts__adress__text">г. Санкт-Петербург, Курортный район, Сестрорецк, ул. Воскова д. 5 (вход со стороны автобусной остановки)</div>
                                     <div class="contacts__adress__map">
-                                        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ab1a47d529a064b389fab24d3d0b0df7ce3985bb2509b98028a520e2baf9cb71e&amp;width=100%25&amp;height=100%&amp;lang=ru_RU&amp;scroll=false"></script>
+                                        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ab1a47d529a064b389fab24d3d0b0df7ce3985bb2509b98028a520e2baf9cb71e&amp;width=100%&amp;height=100%&amp;lang=ru_RU&amp;scroll=false"></script>
                                     </div>
                                 </div>
                                 <div class="contacts__adress__item">
                                     <div class="contacts__subtitle">Адрес,  г.Зеленогорск:</div>
                                     <div class="contacts__adress__text">город Санкт-Петербург, Зеленогорск, проспект Ленина 25 (вход рядом с отделением почты России)</div>
                                     <div class="contacts__adress__map">
-                                        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A1dfaa9459542bfa513dd7c1d0730a04e8005a92d0216d26b1fba36b6011d1f39&amp;width=100%25&amp;height=100%&amp;lang=ru_RU&amp;scroll=false"></script>
+                                        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A1dfaa9459542bfa513dd7c1d0730a04e8005a92d0216d26b1fba36b6011d1f39&amp;width=100%&amp;height=100%&amp;lang=ru_RU&amp;scroll=false"></script>
                                     </div>
                                 </div>
                             </div>
