--- a/zaliv/program.html
+++ b/zaliv/program.html
@@ -8,7 +8,7 @@
     <title>Телепередача</title>
     <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
-<body>
+<body class="program-page">
     <header class="header">
         <div class="header__top">
             <div class="container">
@@ -54,17 +54,17 @@
             <div class="container">
                 <div class="adsense-slider__box">
                     <div>
-                        <a href="#" class="adsense__slide">
+                        <a href="#" class="adsense-slider__slide">
                             <img src="img/adsense_2.png" alt="#">
                         </a>
                     </div>
                     <div>
-                        <a href="#" class="adsense__slide">
+                        <a href="#" class="adsense-slider__slide">
                             <img src="img/adsense_2.png" alt="#">
                         </a>
                     </div>
                     <div>
-                        <a href="#" class="adsense__slide">
+                        <a href="#" class="adsense-slider__slide">
                             <img src="img/adsense_2.png" alt="#">
                         </a>
                     </div>
