--- a/zaliv/tvguide.html
+++ b/zaliv/tvguide.html
@@ -54,17 +54,17 @@
             <div class="container">
                 <div class="adsense-slider__box">
                     <div>
-                        <a href="#" class="adsense__slide">
+                        <a href="#" class="adsense-slider__slide">
                             <img src="img/adsense_2.png" alt="#">
                         </a>
                     </div>
                     <div>
-                        <a href="#" class="adsense__slide">
+                        <a href="#" class="adsense-slider__slide">
                             <img src="img/adsense_2.png" alt="#">
                         </a>
                     </div>
                     <div>
-                        <a href="#" class="adsense__slide">
+                        <a href="#" class="adsense-slider__slide">
                             <img src="img/adsense_2.png" alt="#">
                         </a>
                     </div>
