--- a/cryptomany/index.html
+++ b/cryptomany/index.html
@@ -311,8 +311,8 @@
     </main>
     <footer class="footer">
         <div class="container">
-            <div class="footer__items">
-                <div class="footer__item">
+            <div class="footer__box">
+                <div class="footer__about">
                     <div class="footer__payments">
                         <img src="img/footer__payments_1.png" alt="#">
                         <img src="img/footer__payments_2.png" alt="#">
@@ -339,82 +339,84 @@
                         </a>
                     </div>
                 </div>
-                <div class="footer__item">
-                    <div class="footer__subtitle">О компании</div>
-                    <ul class="footer__links">
-                        <li>
-                            <a href="#">Последние новости</a>
-                        </li>
-                        <li>
-                            <a href="#">Вопросы</a>
-                        </li>
-                        <li>
-                            <a href="#">Контакты</a>
-                        </li>
-                        <li>
-                            <a href="#">Блог</a>
-                        </li>
-                        <li>
-                            <a href="#">Полезные материалы</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="footer__item">
-                    <div class="footer__subtitle">О компании</div>
-                    <ul class="footer__links">
-                        <li>
-                            <a href="#">Последние новости</a>
-                        </li>
-                        <li>
-                            <a href="#">Вопросы</a>
-                        </li>
-                        <li>
-                            <a href="#">Контакты</a>
-                        </li>
-                        <li>
-                            <a href="#">Блог</a>
-                        </li>
-                        <li>
-                            <a href="#">Полезные материалы</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="footer__item">
-                    <div class="footer__subtitle">О компании</div>
-                    <ul class="footer__links">
-                        <li>
-                            <a href="#">Последние новости</a>
-                        </li>
-                        <li>
-                            <a href="#">Вопросы</a>
-                        </li>
-                        <li>
-                            <a href="#">Контакты</a>
-                        </li>
-                        <li>
-                            <a href="#">Блог</a>
-                        </li>
-                        <li>
-                            <a href="#">Полезные материалы</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="footer__item">
-                    <div class="footer__subtitle">Контактная инф.</div>
-                    <ul class="footer__links">
-                        <li>
-                            <a href="tel:+79115434523">+7 (911) 543-45-23</a>
-                        </li>
-                        <li>
-                            <a href="tel:+79003421232">+7 (900) 342-12-32</a>
-                        </li>
-                        <li>
-                            <a href="mailto:info@cryptomany.ru">info@cryptomany.ru</a>
-                        </li>
-                        <li>
-                            <a href="#">www.cryptomany.ru</a>
-                        </li>
-                    </ul>
+                <div class="footer__items">
+                    <div class="footer__item">
+                        <div class="footer__subtitle">О компании</div>
+                        <ul class="footer__links">
+                            <li>
+                                <a href="#">Последние новости</a>
+                            </li>
+                            <li>
+                                <a href="#">Вопросы</a>
+                            </li>
+                            <li>
+                                <a href="#">Контакты</a>
+                            </li>
+                            <li>
+                                <a href="#">Блог</a>
+                            </li>
+                            <li>
+                                <a href="#">Полезные материалы</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer__item">
+                        <div class="footer__subtitle">О компании</div>
+                        <ul class="footer__links">
+                            <li>
+                                <a href="#">Последние новости</a>
+                            </li>
+                            <li>
+                                <a href="#">Вопросы</a>
+                            </li>
+                            <li>
+                                <a href="#">Контакты</a>
+                            </li>
+                            <li>
+                                <a href="#">Блог</a>
+                            </li>
+                            <li>
+                                <a href="#">Полезные материалы</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer__item">
+                        <div class="footer__subtitle">О компании</div>
+                        <ul class="footer__links">
+                            <li>
+                                <a href="#">Последние новости</a>
+                            </li>
+                            <li>
+                                <a href="#">Вопросы</a>
+                            </li>
+                            <li>
+                                <a href="#">Контакты</a>
+                            </li>
+                            <li>
+                                <a href="#">Блог</a>
+                            </li>
+                            <li>
+                                <a href="#">Полезные материалы</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer__item">
+                        <div class="footer__subtitle">Контактная инф.</div>
+                        <ul class="footer__links">
+                            <li>
+                                <a href="tel:+79115434523">+7 (911) 543-45-23</a>
+                            </li>
+                            <li>
+                                <a href="tel:+79003421232">+7 (900) 342-12-32</a>
+                            </li>
+                            <li>
+                                <a href="mailto:info@cryptomany.ru">info@cryptomany.ru</a>
+                            </li>
+                            <li>
+                                <a href="#">www.cryptomany.ru</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
             <div class="footer__copyright">©Все права защищены</div>
