--- a/profitable/index.html
+++ b/profitable/index.html
@@ -61,7 +61,9 @@
                     <h1 class="promo__title">Лучшие решения для социальных сетей</h1>
                     <div class="promo__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi, sem id sit nisl tortor.</div>
                 </div>
-                <a href="#services-link" class="promo__readmore">узнай больше</a>
+                <a href="#services-link" class="promo__readmore">
+                    <div class="promo__readmore__arrow"><img src="img/read-more_arrow.png" alt="#"></div> узнай больше
+                </a>
             </div>
         </div>
     </section>
